<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrieren"
        android:id="@+id/buttonRegistrieren"
        android:background="@color/light_blue_1"
        android:width="200dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anmelden"
        android:id="@+id/buttonAnmeldenAkt"
        android:background="@color/light_blue_2"
        android:width="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:textSize="15sp"
        android:id="@+id/editTextEmailAdressReg"
        android:hint="@string/emailAdresseHint"
        android:layout_alignParentTop="true"
        android:layout_marginTop="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:textSize="15sp"
        android:id="@+id/editTextPasswordReg"
        android:hint="@string/passwordHint"
        android:layout_below="@+id/editTextEmailAdressReg"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/alreadyregisteredText"
        android:id="@+id/textViewAlreadyRegistered"
        android:gravity="center"
        android:layout_above="@+id/buttonAnmeldenAkt"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#FF0000"
        android:id="@+id/textViewDiskurs"
        android:layout_above="@+id/buttonRegistrieren"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"/>


</RelativeLayout>