<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/white">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:id="@+id/textViewArmorItemText"
        android:layout_gravity="center"
        android:layout_marginTop="10dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">



    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/imageViewArmorItem"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:id="@+id/tableLayoutArmorItem"
        android:showDividers="middle|beginning|end"
        android:layout_marginTop="10dp"
        android:clickable="true">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:id="@+id/tableRowTextArmorItem"
            android:layout_marginBottom="5dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/staminaShort"
                android:textSize="12sp"
                android:textColor="@color/dark_blue"
                android:id="@+id/textViewStaminaArmorItem"
                android:layout_marginRight="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strengthShort"
                android:textSize="12sp"
                android:textColor="@color/dark_blue"
                android:id="@+id/textViewStrengthArmorItem"
                android:layout_marginRight="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dexterityShort"
                android:textSize="12sp"
                android:textColor="@color/dark_blue"
                android:id="@+id/textViewDexterityArmorItem"
                android:layout_marginRight="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intelligenceShort"
                android:textSize="12sp"
                android:textColor="@color/dark_blue"
                android:id="@+id/textViewIntelligenceArmorItem"
                android:layout_marginRight="10dp" />


        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:id="@+id/tableRowTextValueArmorItem"
            android:layout_marginBottom="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/dark_blue"
                android:id="@+id/textViewStaminaValueArmorItem"
                android:layout_marginRight="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/dark_blue"
                android:id="@+id/textViewStrengthValueArmorItem"
                android:layout_marginRight="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/dark_blue"
                android:id="@+id/textViewDexterityValueArmorItem"
                android:layout_marginRight="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/dark_blue"
                android:id="@+id/textViewIntelligenceValueArmorItem"
                android:layout_marginRight="10dp" />


        </TableRow>

    </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">


        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/benutzen"
            android:id="@+id/buttonChangeArmor"
            android:background="@color/light_blue_1"
            android:layout_marginRight="10dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entfernen"
            android:id="@+id/buttonArmorDelete"
            android:background="@color/light_blue_1"
            />

    </LinearLayout>

</LinearLayout>